<resources>
    <string name="app_name">Otpless KT</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="login_with_truecaller">Login with TrueCaller</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_whatsapp">Login with Whatsapp</string>
    <string name="login_with_mobilenumber">Login with Mobile No</string>
</resources>