<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headless_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="in.smiley.otpless.HeadlessActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#1F75FE"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Authentication"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/mobilenoButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#25D366"
            android:padding="10dp"
            android:text="@string/login_with_mobilenumber"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/whatsappButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#25D366"
            android:padding="10dp"
            android:text="@string/login_with_whatsapp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#DC143C"
            android:padding="10dp"
            android:text="@string/login_with_google"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/appleButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/black"
            android:padding="10dp"
            android:text="@string/login_with_apple"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/trueCallerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#1180FF"
            android:padding="10dp"
            android:text="@string/login_with_truecaller"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />

</LinearLayout>
